media/_print.scss
/*!
 * Print styles
 */
@media print {
    *,
    *::before,
    *::after {
        color: black !important;
    }

    body {
        background-color: transparent;
        margin-left: 0;
        margin-right: calc(var(--sidenote-width) + var(--sidenote-gutter));
        max-width: none;
    }

    h1 {
        margin-top: calc(var(--vertical-rhythm-unit) * 2);
    }

    h2,
    h3 {
        page-break-after: avoid;
    }

    pre {
        white-space: pre-wrap;
    }

    thead {
        display: table-header-group;
    }

    th::before,
    th::after,
    td::before,
    td::after,
    .SiteLogo::after {
        border-color: silver !important;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    a {
        text-decoration: none;
    }

    main {
        counter-reset: sidenote;

        a[href]:not([href^="#"]),
        abbr[title],
        dfn[title] {
            counter-increment: sidenote;
        }

        a[href]:not([href^="#"])::after,
        abbr[title]::after,
        dfn[title]::after {
            content: counter(sidenote);
            font-family: $font-family-gothic;
            font-weight: $font-weight-gothic-normal;
            font-size: var(--sidenote-font-size);
            line-height: 0;
            position: relative;
            top: -0.5em;
            margin-left: 0.25em;
            margin-right: 0.25em;
            display: inline-block;
            text-indent: 0;
        }

        blockquote[cite]::before,
        a[href]:not([href^="#"])::before,
        abbr[title]::before,
        dfn[title]::before {
            clear: right;
            font-family: $font-family-gothic;
            font-weight: $font-weight-gothic-normal;
            font-size: var(--sidenote-font-size);
            line-height: var(--sidenote-line-height);
            float: right;
            margin-right: calc(0px - var(--sidenote-width) - var(--sidenote-gutter));
            margin-bottom: calc(0px - var(--extra-leading));
            margin-top: var(--extra-leading);
            overflow-wrap: break-word;
            width: var(--sidenote-width);
            text-indent: 1em;
        }

        blockquote[cite]::before {
            content: "\261E " attr(cite);
        }

        a[href]:not([href^="#"])::before {
            content: counter(sidenote) ". " attr(href);
        }

        abbr[title]::before,
        dfn[title]::before {
            content: counter(sidenote) ". " attr(title);
        }
    }

    .SiteHeader {
        display: none;
    }

    .SiteFooter {
        page-break-inside : avoid;
    }

    .SiteFooter__nav {
        display: none;
    }

    .SiteFooter__colophon {
        margin-top: calc(var(--caption-line-height) * 2);
    }

    .SiteFooter__colophon::before {
        content: normal;
    }
}

